@@ -1,5 +1,10 @@
 bzr-svn 0.5.1					UNRELEASED
 
+  BUG FIXES
+
+   * Fix parsing of "trunk/tags" style filenames in trunk repository layout 
+     handling. (#324970)
+
 bzr-svn 0.5.0					2009-02-03
 
   BUG FIXES
